<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">智能停车</string>

    <string name="frag_default_content">default</string>
    <string name="frag_empty_data">数据错误</string>
    <string name="frag_error_happens">发生错误啦</string>
    <string name="frag_loading">加载中</string>
    <string name="frag_user_not_login">您当前尚未登录，敬请登录</string>
    <string name="frag_not_collect">尚未收藏</string>
    <string name="value_error_no_net">获取数据失败，请检查网络后重试</string>
    <string name="value_error_retry">重试</string>

    <!-- 分享 -->
    <string name="share">分享</string>
    <string name="share_title">分享到</string>
    <string name="moments">朋友圈</string>
    <string name="wechat">微信好友</string>
    <string name="weibo">新浪微博</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>

    <!-- item -->
    <string name="delete">删除</string>
    <string name="add_item">添加</string>
    <string name="source_on_github">Github位置</string>
    <string name="title_item">功能</string>

    <!-- XRecyclerView -->
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="loading_done">加载完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录</string>

    <string name="title_home">首页</string>
    <string name="title_dashboard">我的车位</string>
    <string name="title_notifications">用户中心</string>

    <!-- ＬＯＧＩＮ -->
    <string name="string_login_hint_account">手机号/邮箱</string>
    <string name="string_login_hint_nickname">用户名</string>
    <string name="string_login_hint_phone">手机号</string>
    <string name="string_login_hint_email">邮箱</string>
    <string name="string_login_hint_l_email">邮箱号</string>
    <string name="string_login_hint_1_phone">手机号码</string>
    <string name="string_login_hint_l_verify_code">短信验证码</string>
    <string name="string_login_hint_password">密码</string>
    <string name="string_login_hint_l_password">登录密码</string>
    <string name="string_login_forgot_password">忘记密码</string>
    <string name="string_login_btn">登录</string>
    <string name="string_goto_register">还没有账号？立即注册</string>
    <string name="string_goto_thirdplatform">其他登录方式</string>

    <!-- ＲＥＧＩＳＴＥＲ -->
    <string name="string_register_hint_phone_number">请输入手机号</string>
    <string name="string_register_hint_user_name">输入昵称</string>
    <string name="string_register_hint_verify_code">请输入短信验证码</string>
    <string name="string_register_hint_password" tools:ignore="TypographyDashes">请输入密码，6-13位英文字母或数字</string>
    <string name="string_register_verifycode">发送验证码</string>
    <string name="string_register_next_btn">下一步</string>
    <string name="string_register_btn">注册</string>
    <string name="string_retrieve_btn">找回密码</string>
    <string name="string_verify_hint_password">验证码</string>
    <string name="string_login_hint_sms_code">短信验证码</string>
    <string name="string_login_hint_invite">邀请码 (选填)</string>
    <string name="string_goto_login">登录已有帐号</string>
    <string name="string_platform_agreement">我已阅读并同意 注册协议</string>
    <string name="string_login_hint_mobile">手机号</string>
    <string name="string_hint_car_no">车牌号</string>
    <string name="string_commit_info_btn">提交</string>

    <!-- ＭＡＩＮ　－ＭＡＰ -->
    <string name="value_driving_mileage">行驶里程: %1$skm</string>
    <string name="value_driving_time">行驶时间: %1$s</string>
    <string name="string_main_address_home">家</string>
    <string name="string_main_address_company">公司</string>

    <!-- ＣＩＴＹ　ＰＩＣＫＥＲ -->
    <string name="cp_select_city">选择城市</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="cp_located_city">定位城市</string>
    <string name="cp_hint_search_box">请输入城市名或拼音</string>
    <string name="cp_nothing_found">没有搜索结果~</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_located_failed">定位失败</string>

    <!-- 支付 -->
    <string name="action_wechat_pay_test">微信支付测试</string>
    <string name="action_alipay_test">支付宝支付测试</string>
    <string name="string_value_pay_way">推荐有%1$s账户的用户使用</string>
    <string name="preference_key_tts_speed">50</string>
    <string name="preference_key_tts_volume">50</string>
    <string name="preference_key_tts_pitch">50</string>
    <string name="preference_default_tts_role">xiaoyu</string>
    <string name="string_value_more_relative_us">\u3000\u3000江苏彼得潘实业有限公司自创建以来，始终专注于百货/批发/零售行业，公司始终坚持“创新，品质，服务，节约，敬业，感恩”理念。吸收新创意，严把质量关口，全方位的服务跟踪，坚持做出高品质产品。本着“追求、员工、技术、精神、利益”10字宗旨，我们以质量为生命、时间为信誉、价格为竞争力的经营信念，经过多年经验的积累，长时间产品的打磨以及完善的服务，立足于百货/批发/零售行业。江苏彼得潘实业有限公司，座落于美丽的宜兴，是一家集指纹电子锁具的研发，生产，销售，服务为一体的现代高新技术企业。公司注册资金1000万元。\n\n\n\n\n\n\n\n</string>

</resources>
